--- a/核心概念笔记.md
+++ b/核心概念笔记.md
@@ -20,7 +20,45 @@
 2. 组件数据绑定
    1. 组件的生成方式有两种：
       1. 函数式：
+          ```javaScript
+            // 暂时还不知道怎么在函数式组件中用state
+            Button(props){
+              return <button id={props.id}>123</button>
+            }
+          ```
       2. class式：
-   2. 在生成react元素时，将react中的props和state直接写入react元素中
-   3. 当props或者state变化时react会自动生成新的react元素，并用ReactDOM来重新渲染dom
+          ```javaScript
+            class Button extends React.Component{
+              constructor(props){
+                super(props);
+                this.state={
+                  clicked:false
+                }
+              }
+              render(){
+                const clicked = this.state.clicked;
+                return(<button id={this.props.id}>{clicked?'on':'off'}<button>)
+              }
+            }
+          ```
+   2. 在生成react元素时，将组件中的`props`和`state`直接写入react元素中,方法见上面；
+   3. 当`props`或者`state`变化时`React`会自动生成新的react元素，并用`ReactDOM`来重新渲染dom
+   4. 根据数据循环和判断UI的生成可以参考下面
+      ```javaScript
+        // 函数式
+        ButtonGroup(props){
+          const buttonList=props.buttons.map(btn=><button id={btn.id}>{btn.text}</button>)
+          return(
+            <div>{buttonList}</div>
+          )
+        }
+
+        // class式
+        class ButtonGroup extends React.Component{
+          constructor(props){
+            super(props)
+            this.status={click}
+          }
+        }
+      ```
 3. UI事件监听
