--- a/核心概念笔记.md
+++ b/核心概念笔记.md
@@ -17,7 +17,7 @@
       const domContainer = document.querySelector('#like_button_container');
       ReactDOM.render(button,domContainer)
     ```
-2. 组件数据绑定
+2. 组件与UI结合
    1. 组件的生成方式有两种：
       1. 函数式：
           ```javaScript
@@ -43,7 +43,7 @@
           ```
    2. 在生成react元素时，将组件中的`props`和`state`直接写入react元素中,方法见上面；
    3. 当`props`或者`state`变化时`React`会自动生成新的react元素，并用`ReactDOM`来重新渲染dom
-   4. 根据数据循环和判断UI的生成可以参考下面
+   4. 根据数据循环，判断UI的生成，事件监听可以参考下面
       ```javaScript
         // 函数式
         ButtonGroup(props){
@@ -54,11 +54,31 @@
         }
 
         // class式
-        class ButtonGroup extends React.Component{
-          constructor(props){
+        class ButtonGroup extends React.Component {
+          constructor(props) {
             super(props)
-            this.status={click}
+            this.state = { clickedList: props.buttons.map(x => false) }
+          }
+
+          onclickbtn = (index) => {
+            const clickedList = this.state.clickedList;
+            clickedList[index]=!clickedList[index]
+            this.setState({ clickedList: clickedList })
+          }
+
+          render() {
+            const buttonList = this.props.buttons.map(
+              (btn, index) =>
+                <button
+                  onClick={(e) => this.onclickbtn(index, e)}
+                  key={btn} id={btn}>
+                  {this.state.clickedList[index] ? 'on' : 'off'}
+                </button>
+            )
+            return (
+              buttonList
+            )
           }
         }
       ```
-3. UI事件监听
+3. 表单类型
